--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <header class="navigation">
-            <img src="images/logo.png" alt="logo" width="80" height="80">
+            <img src="Images/logo.png" alt="logo" width="80" height="80">
             <ul class="main-menu">
                 <li><a href="Work.html">work</a></li>
                 <li>skills</li>
