--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
         <div class="footer">
             <ul class="contact">
-                <li><a class="email" href="mailto:dengdraws@gmail.com?subject=hello"><img src="images/mail.png" class="email" alt="Email me at dengdraws@gmail.com"></a></li>
-                <li><a class="linkedin" href="https://www.linkedin.com/in/christine-deng" target="_blank"><img src="images/linkedin.png"
+                <li><a class="email" href="mailto:dengdraws@gmail.com?subject=hello"><img src="Images/mail.png" class="email" alt="Email me at dengdraws@gmail.com"></a></li>
+                <li><a class="linkedin" href="https://www.linkedin.com/in/christine-deng" target="_blank"><img src="Images/linkedin.png"
                     class="linkedin" alt=""></a></li>                
                 <li><a class="instagram" href="https://www.instagram.com/dengdraws/" target="_blank"><img src="Images/ig.png" class="instagram" alt="Follow me on Instagram"></a></li>
             </ul> 
